comment out all solutions

--- a/01-matplotlib.ipynb
+++ b/01-matplotlib.ipynb
@@ -189,13 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load exe00.py\n",
-    "fig, axes = plt.subplots(nrows=2, ncols=2)\n",
-    "\n",
-    "axes[0][0].plot(x, y, marker='o', linestyle='none')\n",
-    "axes[0][1].plot(x, y, marker='x', linestyle='-.')\n",
-    "axes[1][0].plot(x, y, marker='*', linestyle='--', color='crimson')\n",
-    "axes[1][1].scatter(x, y);"
+    "# %load exe00.py"
    ]
   },
   {
@@ -451,17 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load exe03.py\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "cs = ax.contourf(x, y, data, extend='both')\n",
-    "\n",
-    "cbar = fig.colorbar(\n",
-    "    cs,\n",
-    "    orientation='vertical',\n",
-    "    shrink=0.7,\n",
-    "    extend='both',\n",
-    ")\n"
+    "# %load exe03.py"
    ]
   },
   {
@@ -514,23 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load exe04.py\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "ax.plot(\n",
-    "    x, 0.5*x**3 - 3*x**2,\n",
-    "    linewidth=2\n",
-    ")\n",
-    "\n",
-    "ax.annotate(\n",
-    "    'Máximo local',\n",
-    "    xy=(0, 0),\n",
-    "    xytext=(-2, -40),\n",
-    "    fontsize=15,\n",
-    "    arrowprops={'facecolor': 'black'}\n",
-    ")\n",
-    "\n",
-    "ax.grid(True)\n"
+    "# %load exe04.py"
    ]
   },
   {
@@ -995,7 +963,7 @@
    },
    "outputs": [],
    "source": [
-    "%load exe07a.py"
+    "# %load exe07a.py"
    ]
   },
   {
@@ -1008,7 +976,7 @@
    },
    "outputs": [],
    "source": [
-    "%load exe07b.py"
+    "# %load exe07b.py"
    ]
   },
   {
@@ -1017,7 +985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load exe07c.py"
+    "# %load exe07c.py"
    ]
   },
   {
