--- a/03-BTS_CoreCO1.ipynb
+++ b/03-BTS_CoreCO1.ipynb
@@ -165,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:IOOS]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-IOOS-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
