--- a/01-matplotlib.ipynb
+++ b/01-matplotlib.ipynb
@@ -931,7 +931,7 @@
    "source": [
     "from IPython.display import IFrame\n",
     "\n",
-    "url = \"http://matplotlib.org/gallery.html\"\n",
+    "url = \"https://matplotlib.org/gallery.html\"\n",
     "\n",
     "IFrame(url, width=900, height=500)"
    ]
@@ -1011,9 +1011,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "%matplotlib notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import animatplot as amp\n",
     "\n",
     "\n",
@@ -1027,7 +1033,7 @@
     "anim = amp.Animation([block])\n",
     "\n",
     "anim.controls()\n",
-    "anim.save_gif('line.gif')"
+    "anim.save_gif('line')"
    ]
   },
   {
@@ -1038,8 +1044,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from matplotlib.animation import FuncAnimation\n",
     "\n",
     "\n",
